# dark-descent

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: pch.hpp
include/game/: DarkDescent.hpp
include/game/components/: Position.hpp
include/game/scenes/: TestScene.hpp
include/ion/: Config.hpp  Debug.hpp  Engine.hpp  EventManager.hpp  Game.hpp  GameObject.hpp  GraphicsManager.hpp  Hash.hpp  Logger.hpp  Maybe.hpp  Scene.hpp  SceneManager.hpp  SubSystem.hpp  Window.hpp  WindowManager.hpp  ion.hpp
include/ion/ecs/: Arch.hpp  Buffer.hpp  Component.hpp  Ecs.hpp  Entity.hpp
src/: main.cpp
src/game/: DarkDescent.cpp
src/game/scenes/: TestScene.cpp
src/ion/: Debug.cpp  Engine.cpp  Game.cpp  GameObject.cpp  GraphicsManager.cpp  Logger.cpp  Scene.cpp  SceneManager.cpp  Window.cpp  WindowManager.cpp
src/ion/ecs/: Arch.cpp  Buffer.cpp  Component.cpp  Ecs.cpp
